--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -99,4 +99,10 @@ and (min-width: 768px)
     margin-top: 20px;
   }
 
+  #info {
+    width: 70%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
 }
